--- a/roles/docker/templates/daemon.json.j2
+++ b/roles/docker/templates/daemon.json.j2
@@ -11,9 +11,9 @@
     {% if proxy_conf is defined %}
     "proxies": {
         "default": {
-          "httpProxy": "http://proxy.example.com:3128",
-          "httpsProxy": "https://proxy.example.com:3129",
-          "noProxy": "*.test.example.com,.example.org,127.0.0.0/8"
+          "httpProxy": "{{ proxy_conf.http }}",
+          "httpsProxy": "{{ proxy_conf.http }}",
+          "noProxy": "{{ proxy_conf.noProxy }}"
         }
     }
     {% endif %}
