--- a/roles/bastion/templates/01proxy.j2
+++ b/roles/bastion/templates/01proxy.j2
@@ -1,2 +1,2 @@
-Acquire::http::Proxy {{ proxy_conf.http }};
-Acquire::https::Proxy {{ proxy_conf.https }};
+Acquire::http::Proxy "{{ proxy_conf.http }}";
+Acquire::https::Proxy "{{ proxy_conf.https }}";
