--- a/roles/bastion/templates/sshpiper-compose.j2
+++ b/roles/bastion/templates/sshpiper-compose.j2
@@ -5,6 +5,6 @@ services:
     environment:
       SSHPIPERD_YAML_CONFIG: "/var/sshpiper/sshpiper.yaml"
     ports:
-      - "2222:2222"
+      - "{{ ansible_eth1.ipv4.address }}:22:2222"
     volumes:
       - /opt/bastion/sshpiper/:/var/sshpiper/
